# ni-pdp-semestralka

./: .gitignore  CMakeLists.txt  README.md  README.rst
src/: .gitignore  autorun.py  main.cpp  out.txt  shellrun.sh
zprava/: zprava.tex
